--- a/src/main/webapp/dashboard.xhtml
+++ b/src/main/webapp/dashboard.xhtml
@@ -6,10 +6,15 @@
         <title>Facelet Title</title>
     </h:head>
     <h:body>
-        Hello from Facelets
-        <form action="jasper" method="GET" name="for">
+        <form action="jasper" method="GET" name="for" id="form">
             
             <input type="submit" name="boton" value="Reporte Funcion"/>
+            <br/>
+            <h:outputLabel value="Desde:"/><input type="date" name="fecha1"/>
+            <br/>
+            <h:outputLabel value="Hasta:"/><input type="date" name="fecha2"/>
+            <br/>
+            <input type="submit" name="boton" value="Reporte Pelicula"/>
         </form> 
     </h:body>
 </html>
